<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintDimensionRatio="3:5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="contentDescription">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="2" />

                    <ImageView
                        android:id="@+id/img1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3" />

                    <ImageView
                        android:id="@+id/img2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3" />

                    <ImageView
                        android:id="@+id/img3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="2" />
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
            </LinearLayout>
        </FrameLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="8"
            android:paddingTop="10dp"
            android:rowCount="1">

            <TextView
                android:id="@+id/text1"
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/mode1"
                android:textSize="@dimen/textSize_large" />

            <TextView
                android:id="@+id/text2"
                android:layout_row="0"
                android:layout_column="1"
                android:text="@string/mode2"
                android:textSize="@dimen/textSize_large" />

            <TextView
                android:id="@+id/text3"
                android:layout_row="0"
                android:layout_column="2"
                android:text="@string/mode3"
                android:textSize="@dimen/textSize_large" />

            <TextView
                android:id="@+id/text4"
                android:layout_row="0"
                android:layout_column="3"
                android:text="@string/mode4"
                android:textSize="@dimen/textSize_large" />

            <TextView
                android:id="@+id/text5"
                android:layout_row="0"
                android:layout_column="4"
                android:text="@string/mode5"
                android:textSize="@dimen/textSize_large" />

            <TextView
                android:id="@+id/text6"
                android:layout_row="0"
                android:layout_column="5"
                android:text="@string/mode6"
                android:textSize="@dimen/textSize_large" />

            <TextView
                android:id="@+id/text7"
                android:layout_row="0"
                android:layout_column="6"
                android:text="@string/mode7"
                android:textSize="@dimen/textSize_large" />

            <TextView
                android:id="@+id/text8"
                android:layout_row="0"
                android:layout_column="7"
                android:text="@string/mode8"
                android:textSize="@dimen/textSize_large" />

        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/radius_button"
                android:text="@string/fire"
                android:textAllCaps="false"
                android:textSize="@dimen/textSize_medium" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/sw"
                android:textSize="@dimen/textSize_small" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="@dimen/textSize_small" />

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opt_heaven"
                    android:textAllCaps="false"
                    android:textSize="@dimen/textSize_small" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/opt1"
                        android:textAllCaps="false"
                        android:textSize="@dimen/textSize_small" />

                    <Button
                        android:id="@+id/btn4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/opt2"
                        android:textAllCaps="false"
                        android:textSize="@dimen/textSize_small" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/opt3"
                        android:textAllCaps="false"
                        android:textSize="@dimen/textSize_small" />

                    <Button
                        android:id="@+id/btn6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/opt4"
                        android:textAllCaps="false"
                        android:textSize="@dimen/textSize_small" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>